# Backend-ComercialComarapa

./: .editorconfig  .env  .env.development  .env.example  .env.production  .env.staging  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
Documentation/Architecture/: ARQUITECTURA.md  Backend-ComercialComarapa.code-workspace
Documentation/api/: examples.md
Documentation/database/: schema.sql
Documentation/project-init/: ARCHITECTURE.md  PHASE1-IMPLEMENTATION-PLAN.md  PRD-inventory-management-api.md
db/: schema.sql
db/migrations/: .gitkeep
db/seeds/: .gitkeep  seed_data.sql
src/comercial_comarapa/: __init__.py  config.py  main.py
src/comercial_comarapa/api/: __init__.py
src/comercial_comarapa/api/v1/: __init__.py  categories.py  deps.py  import_products.py  inventory.py  products.py  router.py
src/comercial_comarapa/core/: __init__.py  exception_handlers.py  exceptions.py  logging.py  protocols.py
src/comercial_comarapa/db/: __init__.py  database.py  health.py  local_client.py  pool.py  supabase.py  whitelist.py
src/comercial_comarapa/db/repositories/: __init__.py  base.py  category.py  inventory.py  product.py
src/comercial_comarapa/models/: __init__.py  category.py  common.py  import_extraction.py  inventory.py  product.py  sale.py  validators.py
src/comercial_comarapa/prompts/: __init__.py  template_service.py
src/comercial_comarapa/prompts/templates/: autocomplete.j2  extraction.j2
src/comercial_comarapa/services/: __init__.py  ai_extraction_service.py  category_service.py  inventory_service.py  matching_service.py  product_service.py
tests/: __init__.py  conftest.py  test_health.py
tests/api/: __init__.py  test_categories.py  test_import_products.py  test_inventory.py  test_products.py
tests/models/: __init__.py  test_category.py  test_import_extraction.py  test_inventory.py  test_product.py  test_sale.py
tests/prompts/: test_template_service.py
tests/services/: test_ai_extraction_service.py  test_matching_service.py
