[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# PROJECT METADATA
# =============================================================================
[project]
name = "comercial-comarapa"
version = "0.1.0"
description = "REST API for inventory management system - Comercial Comarapa"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Comercial Comarapa", email = "dev@comercialcomarapa.com" }
]
keywords = ["inventory", "api", "fastapi", "supabase", "retail"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

# =============================================================================
# DEPENDENCIES
# =============================================================================
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "psycopg[binary,pool]>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

# =============================================================================
# PROJECT URLS
# =============================================================================
[project.urls]
Documentation = "https://github.com/comercialcomarapa/backend-cc#readme"
Repository = "https://github.com/comercialcomarapa/backend-cc"
Issues = "https://github.com/comercialcomarapa/backend-cc/issues"

# =============================================================================
# HATCH BUILD CONFIGURATION
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/comercial_comarapa"]

# =============================================================================
# HATCH ENVIRONMENTS
# =============================================================================

# -----------------------------------------------------------------------------
# Default Environment (shared tools: lint, format, test)
# -----------------------------------------------------------------------------
[tool.hatch.envs.default]
type = "virtual"
python = "3.12"
dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src/"
format = "ruff format src/"
fix = "ruff check src/ --fix"
check = ["lint", "format --check"]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src/comercial_comarapa --cov-report=term-missing"

# -----------------------------------------------------------------------------
# Development Environment (local Docker PostgreSQL)
# -----------------------------------------------------------------------------
[tool.hatch.envs.dev]
type = "virtual"
python = "3.12"
env-file = ".env.development"

[tool.hatch.envs.dev.scripts]
start = "uvicorn comercial_comarapa.main:app --reload --host 0.0.0.0 --port 8000"
server = "uvicorn comercial_comarapa.main:app --reload --host 0.0.0.0 --port 8000"

# -----------------------------------------------------------------------------
# Staging Environment (Supabase staging)
# -----------------------------------------------------------------------------
[tool.hatch.envs.stage]
type = "virtual"
python = "3.12"
env-file = ".env.staging"

[tool.hatch.envs.stage.scripts]
start = "uvicorn comercial_comarapa.main:app --host 0.0.0.0 --port 8000"
server = "uvicorn comercial_comarapa.main:app --host 0.0.0.0 --port 8000"

# -----------------------------------------------------------------------------
# Production Environment (Supabase production)
# -----------------------------------------------------------------------------
[tool.hatch.envs.prod]
type = "virtual"
python = "3.12"
env-file = ".env.production"

[tool.hatch.envs.prod.scripts]
start = "uvicorn comercial_comarapa.main:app --host 0.0.0.0 --port 8000 --workers 4"
server = "uvicorn comercial_comarapa.main:app --host 0.0.0.0 --port 8000 --workers 4"

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
# FastAPI requires runtime imports for dependency injection
"src/comercial_comarapa/api/**" = ["TC001", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["comercial_comarapa"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-ra -q"

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src/comercial_comarapa"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

